--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
   background: #fafafa;
   border-radius: 4px;
   width: 15rem;
-  font-size: 1.5rem;
+  font-size: 1.4rem;
 }
 
 .nav-icons {
@@ -24,4 +24,16 @@
 .icon {
   font-size: 1.4rem;
   margin: 1rem 0.5rem;
+}
+
+/* ===== Profile-section === */
+
+.profile-section {
+  margin: 1rem 20rem 2rem 20rem;
+  height: 35vh;
+  border: 1px dotted red;
+}
+
+h2 {
+  text-align: center;
 }
