--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,10 @@
 
 /* ===== HEADER === */
 
+.header-logo {
+  cursor: pointer;
+}
+
 .searchBar {
   outline: none;
   border: 1px solid #dddddd;
@@ -24,16 +28,61 @@
 .icon {
   font-size: 1.4rem;
   margin: 1rem 0.5rem;
+  cursor: pointer;
 }
 
 /* ===== Profile-section === */
 
 .profile-section {
   margin: 1rem 20rem 2rem 20rem;
-  height: 35vh;
+  height: 30rem;
   border: 1px dotted red;
 }
 
-h2 {
+.profile-info-container {
+  display: flex;
+}
+
+.avatar {
+  margin: 0.5rem 5rem 0 3rem;
+}
+
+.profile-row-1,
+.profile-row-2 {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.noskro {
+  margin-right: 4rem;
+  font-size: 2.3rem;
+}
+
+.btn {
+  font-size: 1.2rem;
+  margin: 0.2rem;
+}
+
+.follower {
+  font-size: 1.2rem;
+}
+
+/* ------ */
+.profile-img-container {
+  display: flex;
+}
+
+.profile-img {
   text-align: center;
+  margin: 0 1.5rem;
+}
+
+.profile-icon {
+  cursor: pointer;
+}
+
+.profile-img-title {
+  font-size: 1.2rem;
+  cursor: pointer;
 }
