--- a/src/App.css
+++ b/src/App.css
@@ -2,12 +2,14 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  line-height: 120%;
 }
 
 /* ===== HEADER === */
 
 .header-logo {
   cursor: pointer;
+  margin: 0 5rem 0 20rem;
 }
 
 .searchBar {
@@ -23,6 +25,7 @@
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+  margin-right: 20rem;
 }
 
 .icon {
@@ -34,7 +37,7 @@
 /* ===== Profile-section === */
 
 .profile-section {
-  margin: 1rem 20rem 2rem 20rem;
+  margin: 1rem 25rem 2rem 25rem;
   height: 30rem;
   border: 1px dotted red;
 }
@@ -43,15 +46,23 @@
   display: flex;
 }
 
+.profile-info {
+  margin-top: 2rem;
+  border: 1px dotted green;
+}
+
+.profile-img-container {
+  margin-top: 4rem;
+}
+
 .avatar {
-  margin: 0.5rem 5rem 0 3rem;
+  margin: 0.5rem 6rem 5rem 3rem;
 }
 
 .profile-row-1,
 .profile-row-2 {
   display: flex;
   align-items: center;
-  justify-content: space-around;
 }
 
 .noskro {
@@ -66,6 +77,23 @@
 
 .follower {
   font-size: 1.2rem;
+}
+
+.info-title {
+  font-size: 1.5rem;
+}
+
+.info-link {
+  color: blue;
+  font-weight: bold;
+}
+
+.scotch {
+  font-size: 1.4rem;
+}
+
+.info {
+  font-size: 1.3rem;
 }
 
 /* ------ */
