--- a/src/App.css
+++ b/src/App.css
@@ -164,3 +164,23 @@
 }
 
 /* ===== GALLERY === */
+
+.gallery-section {
+  margin: 1rem 25rem;
+}
+
+.gallery-nav {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-top: 1px solid #dddddd;
+}
+
+.gallery-nav-item {
+  font-size: 1.2rem;
+  margin: 1rem 2rem;
+}
+
+.gallery-images {
+  border: red 1px dotted;
+}
